<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginHorizontal="@dimen/defaut_margin"
    android:layout_marginVertical="50dp"
    android:padding="@dimen/item_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background_color_header" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_meteo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_meteo_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        android:layout_marginLeft="@dimen/defaut_margin"
        style="@style/titleTextStyle"
        />



    <TextView
        android:id="@+id/popup_meteo_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaut_margin"
        android:text="@string/popup_meteo_description_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        style="@style/titleTextStyle"/>

    <TextView
        android:id="@+id/popup_meteo_description_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_meteo_description_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_meteo_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_meteo_description_title"
        style="@style/popupTextStyle"/>

    <TextView
        android:id="@+id/popup_meteo_altitude_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaut_margin"
        android:text="@string/popup_meteo_altitude_title"
        app:layout_constraintStart_toStartOf="@+id/popup_meteo_description_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_meteo_description_subtitle"
        style="@style/titleTextStyle"/>

    <TextView
        android:id="@+id/popup_meteo_altitude_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_meteo_altitude_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_meteo_altitude_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_meteo_altitude_title"
        style="@style/popupTextStyle"/>

    <TextView
        android:id="@+id/popup_meteo_multimodel_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaut_margin"
        android:text="@string/popup_meteo_multimodel_title"
        app:layout_constraintStart_toStartOf="@+id/popup_meteo_altitude_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_meteo_altitude_subtitle"
        style="@style/titleTextStyle"/>

    <TextView
        android:id="@+id/popup_meteo_multimodel_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_meteo_multimodel_subtitle"
        android:autoLink="web"
        app:layout_constraintStart_toStartOf="@+id/popup_meteo_multimodel_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_meteo_multimodel_title"
        style="@style/popupTextStyle"/>

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_meteo_multimodel_subtitle" />

    <!--<ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_trash"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />-->

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation"
         />

</androidx.constraintlayout.widget.ConstraintLayout>